# face-recognization

./: .gitignore  CONTEXT.md
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  decorators.py  extensions.py
backend/app/core/: log.py
backend/app/models/: __init__.py  attendance.py  class_.py  course.py  student.py  student_course.py  user.py
backend/app/resources/: __init__.py  attendance.py  auth.py  face.py  manage.py
backend/app/schemas/: __init__.py  attendance.py  auth.py  face.py  manage.py
backend/app/services/: face_service.py  mobilenet.py
backend/migrations/versions/: 195f4f8a42ee_add_student_course_table.py
docs/: API.md  PRD.md  project-overview.md  (+1 more)
frontend/: ARCHITECTURE.md  main.py  pyproject.toml
frontend/app/: __init__.py
frontend/app/components/: __init__.py  action_card.py  course_combo.py  data_table.py  delete_confirm.py  form_card.py  stat_card.py
frontend/app/core/: __init__.py  event_bus.py  router.py  store.py  theme.py
frontend/app/models/: __init__.py  attendance.py  course.py  student.py  user.py
frontend/app/pages/: __init__.py  base_page.py
frontend/app/pages/attendance/: attendance_page.py
frontend/app/pages/checkin/: camera_widget.py  checkin_page.py
frontend/app/pages/courses/: course_page.py
frontend/app/pages/dashboard/: dashboard_page.py
frontend/app/pages/login/: login_page.py
frontend/app/services/: __init__.py  api_client.py  attendance_service.py  auth_service.py  course_service.py  face_service.py  student_service.py
frontend/resources/styles/: base.qss
(+4 files in other folders)
