[project]
name = "visionattend"
version = "0.2.0"
description = "人脸识别考勤系统 - PySide6 桌面前端"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=0.8.0",
    "qtawesome>=1.3.0",
    "opencv-python-headless>=4.8.0",
    "requests>=2.28.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyqtgraph>=0.13.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = []
